[package]
name = "pdfan"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-trait = "0.1.89"
axum = "0.8.8"
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }
color-eyre = "0.6.5"
futures = "0.3.31"
krilla = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[lints.rust]
async_fn_in_trait = "allow"
